force-app/main/default/objects/Field_Change__c/Field_Change__c.object-meta.xml
<CustomObject>
    <label>Field Change</label>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>Field Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>