force-app/main/default/objects/Field_Change__c/fields/Changed_Record__c.field-meta.xml
<CustomField>
    <fullName>Changed_Record__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Changed_Record_Id__c, &quot;View Changed Record&quot;, &quot;_self&quot;)</formula>
    <label>Changed Record</label>
    <type>Text</type>
</CustomField>