force-app/main/default/objects/Field_Change__c/fields/Changed_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Changed_Record_Id__c</fullName>
    <label>Changed Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>