force-app/main/default/objects/Field_Change__c/fields/Date_Changed__c.field-meta.xml
<CustomField>
    <fullName>Date_Changed__c</fullName>
    <label>Date Changed</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>