force-app/main/default/objects/Field_Change__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Object_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Field_Change_Fields</valueSetName>
    </valueSet>
</CustomField>