force-app/main/default/objects/Field_Change__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object_Name__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Old_Value__c</columns>
    <columns>New_Value__c</columns>
    <columns>Changed_Record__c</columns>
    <columns>Date_Changed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>